[project]
name = "pyjiit"
version = "0.1.0a5"
description = "Python wrapper for JIIT webportal"
authors = [{name="Harsh Sharma", email="harsh@codelif.in"}]
license = "MIT License"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
  "requests (>=2.32.3,<3.0.0)",
  "pycryptodome (>=3.22.0,<4.0.0)"
]

[project.urls]
Homepage = "https://github.com/codelif/pyjiit"
Issues = "https://github.com/codelif/pyjiit/issues"


[tool.poetry.group.docs.dependencies]
sphinx = ">=7.4.7"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


